--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
 body{
-    
+    background-color: #FCFBFB;
     font-family: 'Noto Sans', sans-serif;
 }
 footer{
     background-color: #1a1a1a;
-    color:#faf7f7;
+    color:#fff;
 }
 footer p{
     text-align: center;
@@ -21,7 +21,7 @@ section{
     text-align: center;
 }
 footer .menurodape{
-    background-color: #f7f7f7;
+    background-color: #FCFBFB;
     color: #1a1a1a;
 }
 footer .itensrodape a, footer .sociais{
@@ -31,7 +31,7 @@ footer .itensrodape a, footer .sociais{
     text-decoration: none;
     font-weight: 900;
 }
-.sociais ul li i{
+.sociais ul li i {
     font-size: 40px;
     color: #1a1a1a;
 }
@@ -44,48 +44,64 @@ footer .itensrodape a, footer .sociais{
     display: inline-block;
     padding-top: 40px;
     text-align: center;
+    padding-bottom: 40px;
 }
 
-.endereco h2{
+.endereco h2 {
     font-size: 40px;
     font-weight: 900;
 }
-
 .endereco p{
     padding: 20px;
     line-height: 25px;
     font-size: 22px;
 }
+.localizacao .endereco {
+    margin-top: 65px;
+    float: left;
+}
+
 a:hover{
     opacity: 0.7;
-    transition: 0.5s;
+    transition: 0.3s;
 }
 a{
     opacity: 1;
     transition: 0.3s;
 }
-.btnBlack{
-    color: #f7f7f7;
-    background-color: #0b0a0a;
+
+.btnBlack, .btnBlue {
+    color: #FCFBFB;
+    background-color: #1a1a1a;
     font-size: 30px;
     text-align: center;
     display: inline-block;
     padding: 10px 20px;
+    font-weight: 900;
+}
+
+.btnBlue{
+    background-color: #0303fd;
 }
 .maisAtracoes{
     text-align: center;
-    padding: 100px 0;
+    padding: 100px 0 ;
 }
-.destaque{
+.destaque {
     width: 350px;
     border-radius: 180px;
     height: 350px;
     overflow: hidden;
     display: inline-block;
     float: left;
+    margin: 20px 0;
+}
+.destaque.direito{
+    float: right;
 }
 .destaque img{
     min-height: 100%;
+    height: 100%;
 }
 .descricao{
     display: inline-block;
@@ -102,21 +118,44 @@ a{
     font-weight: 900;
     margin-bottom: 20px;
 }
+
 .projeto1{
+    background-image: url('../img/casa.png');
+    margin-top: 40px;
+}
+.projeto2{
+    background-image: url('../img/casa\ de\ gamessssss.jpg');
+}
+.projeto3{
+    background-image: url('../img/casa1.png');
+}
+.projeto4{
     background-image: url('../img/images.jpg');
 }
 .projetos{
     background-size: cover;
     width: 100%;
-    height: 600px;
     content: "";
     background-position: center 33%;
     background-attachment: fixed;
     background-repeat: no-repeat;
     z-index: -99;
-    position: absolute;
+    
 }
 .bg{
     background-color: #1a1a1ad4;
-    
+    display: flex;
+}
+.both{
+    clear: both;
+}
+
+.titulo{
+    font-size: 40px;
+    font-weight: 900;
+    padding: 20px;
+}
+
+.center{
+    text-align: center;
 }
