--- a/css/style.css
+++ b/css/style.css
@@ -224,9 +224,11 @@ hr {
     margin-bottom: 40px;
     line-height: 22px;
 }
+
 .noticias .imagem{
     width: 100%;
 }
+
 .noticias h3{
     font-weight: bold;
 }
@@ -234,10 +236,15 @@ hr {
     width: 30%;
     margin: 1%;
 }
+.noticias .texto{
+    text-align: left;
+    margin-bottom: 20px;
+}
 .blog{
     padding: 40px 0;
 }
-.maisblog{
+
+.maisdoblog{
     float: right;
     color: #1A1A1A;
     font-size: 22px;
@@ -249,7 +256,7 @@ hr {
     background-color: #fff;
     width: 10%;
     margin: 3%;
-    display: inline-block;
+    display: inline-block; 
 }
 .apoio li img{
     width: 100%;
@@ -325,7 +332,7 @@ header nav{
     font-size: 100px;
     font-weight: 900;
 }
-.sobre .img,.sobre .titulo, .sobre p, .btnBlack{
+.sobre .img, .sobre .titulo, .sobre p, .btnBlack{
     float: left;
 }
 .sobre p{
@@ -344,4 +351,28 @@ header nav{
 .sobre .btnBlack{
     margin-left: 20px;
     margin-top: 20px;
+}
+nav.mobile{
+    display: none;
+}
+/* RESPONSIVO*/
+@media  screen and (max-width: 480px) {
+    header nav{
+        display: none;
+    }
+    nav.mobile{
+        display: block;
+    }
+    nav.mobile ul li ul{
+        display:none;
+    }
+    nav.mobile ul li:hover ul.sub{
+        display: block;
+    } 
+    nav.mobile ul.sub li {
+        width: 100%;
+        position: ralative;
+        z-index:999;
+    }
+    
 }
